    Fixed toolbar buttons not set to disabled when the editor is in readonly mode #TINY-4592
    Fixed bug where title, width, height would be set to empty string values when updating an image and removing those using the image dialog #TINY-4786
    Fixed `ObjectResized` event firing when an object wasn't resized #TINY-4161
    Fixed the placeholder not hiding when pasting content into the editor #TINY-4828
    Fixed an issue where the editor would fail to load if local storage was disabled #TINY-5935
Version 5.2.2 (2020-04-23)
    Fixed an issue where anchors could not be inserted on empty lines #TINY-2788
    Fixed text decorations (underline, strikethrough) not consistently inheriting the text color #TINY-4757
    Fixed `format` menu alignment buttons inconsistently applying to images #TINY-4057
    Fixed the floating toolbar drawer height collapsing when the editor is rendered in modal dialogs or floating containers #TINY-4837
    Fixed `media` embed content not processing safely in some cases #TINY-4857
Version 5.2.1 (2020-03-25)
    Fixed the "is decorative" checkbox in the image dialog clearing after certain dialog events #FOAM-11
    Fixed possible uncaught exception when a `style` attribute is removed using a content filter on `setContent` #TINY-4742
    Fixed the table selection not functioning correctly in Microsoft Edge 44 or higher #TINY-3862
    Fixed the table resize handles not functioning correctly in Microsoft Edge 44 or higher #TINY-4160
    Fixed the floating toolbar drawer disconnecting from the toolbar when adding content in inline mode #TINY-4725 #TINY-4765
    Fixed `readonly` mode not returning the appropriate boolean value #TINY-3948
    Fixed the `forced_root_block_attrs` setting not applying attributes to new blocks consistently #TINY-4564
    Fixed the editor incorrectly stealing focus during initialization in Microsoft Internet Explorer #TINY-4697